tests/ui/consts/fn_trait_refs.stderr
error[E0635]: unknown feature `const_fn_trait_ref_impls`
  --> $DIR/fn_trait_refs.rs:3:12
   |
LL | #![feature(const_fn_trait_ref_impls)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `const_cmp`
  --> $DIR/fn_trait_refs.rs:8:12
   |
LL | #![feature(const_cmp)]
   |            ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:15:15
   |
LL |     T: ~const Fn<()> + ~const Destruct,
   |               ^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:15:15
   |
LL |     T: ~const Fn<()> + ~const Destruct,
   |               ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:22:15
   |
LL |     T: ~const FnMut<()> + ~const Destruct,
   |               ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:22:15
   |
LL |     T: ~const FnMut<()> + ~const Destruct,
   |               ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:29:15
   |
LL |     T: ~const FnOnce<()>,
   |               ^^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:29:15
   |
LL |     T: ~const FnOnce<()>,
   |               ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:36:15
   |
LL |     T: ~const Fn<()> + ~const Destruct,
   |               ^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:36:15
   |
LL |     T: ~const Fn<()> + ~const Destruct,
   |               ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:50:15
   |
LL |     T: ~const FnMut<()> + ~const Destruct,
   |               ^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/fn_trait_refs.rs:50:15
   |
LL |     T: ~const FnMut<()> + ~const Destruct,
   |               ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0635`.
